--- a/package.json
+++ b/package.json
@@ -26,11 +26,17 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
     "@types/node": "^17.0.15",
     "@types/react": "^17.0.39",
+    "babel-jest": "^27.5.1",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "faker": "5.5.2",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
     "miragejs": "^0.1.43",
     "typescript": "^4.5.5"
   }
